<resources>
    <string name="app_name">MovieApp</string>
    <string name="title_popular_movie">Popular movies</string>
    <string name="title_toprated_movie">Top rated movies</string>
    <string name="title_popular_serial">Popular serials</string>
    <string name="title_toprated_serial">Top rated serials</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_favorite_movie">Favorite movies</string>
    <string name="title_favorite_serial">Favorite serials</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="pref_style_default" translatable="false">Dark</string>

    <string name="pref_style_label">Select theme</string>

    <string name="pref_style_label_dark">Dark</string>
    <string name="pref_style_label_light">Light</string>
    <string name="pref_style_key" translatable="false">dark</string>

    <string name="pref_style_dark" translatable="false">dark</string>

    <string name="pref_style_light" translatable="false">light</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="pref_default_sync">24</string>
    <string name="pref_key_sync">Sync</string>
    <string name="pref_default_sort_movie">popularity.desc</string>
    <string name="pref_key_sort_movie">SortMovie</string>
    <string name="pref_title_sort_movie">Sort movie</string>
    <string name="pref_default_sort_serial">popularity.desc</string>
    <string name="pref_key_sort_serial">SortSerial</string>
    <string name="pref_title_sort_serial">Sort serial</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="pref_default_widget">Movies</string>
    <string name="pref_key_widget">Widget</string>
    <string name="pref_title_widget">Widget collection</string>
    <string name="turn_off_searching">Turn off searching</string>
    <string name="internet_message">No internet connection</string>
    <string name="empty_movie_favorite">No favorite movies</string>
    <string name="empty_serial_favorite">No favorite serials</string>
    <string name="error_widget">Error loading data</string>
    <string name="end_synchronization">Completed data synchronization.</string>
</resources>
